--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="share_app">Поделиться приложением</string>
     <string name="write_to_support">Написать в поддержку</string>
     <string name="terms_of_use">Пользовательское соглашение</string>
+    <string name="default_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
+    <string name="default_email">support@example.com</string>
+    <string name="default_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
+    <string name="default_text_in_messenger">https://practicum.yandex.ru/android-developer/</string>
+    <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
 </resources>
