--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="default_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="default_text_in_messenger">https://practicum.yandex.ru/android-developer/</string>
     <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
+    <string name="search_input_hint">Поиск</string>
+    <string name="search_clear_description">Очистить поисковый запрос</string>
 </resources>
