--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="practicum_offer_link">https://yandex.ru/legal/practicum_offer/</string>
     <string name="search_input_hint">Поиск</string>
     <string name="search_clear_description">Очистить поисковый запрос</string>
+    <string name="btn_back_description">Вернуться назад</string>
 </resources>
