--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,11 @@
     <string name="collection_name_label">Альбом</string>
     <string name="track_time_label">Длительность</string>
     <string name="current_track_time_placeholder">0:00</string>
+    <string name="media_library">Медиатека</string>
+    <string name="featured_tracks">Избранные треки</string>
+    <string name="playlists">Плейлисты</string>
+    <string name="empty_media_library">Ваша медиатека пуста</string>
+    <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="tab_placeholder">Раздел</string>
 </resources>
