--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="no_playlists_created">Вы не создали\nни одного плейлиста</string>
     <string name="new_playlist">Новый плейлист</string>
     <string name="tab_placeholder">Раздел</string>
+    <string name="unknown_error">Неизвестная ошибка</string>
 </resources>
