--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,5 @@
     <string name="delete_playlist">Удалить плейлист</string>
     <string name="header_edit_playlist">Редактировать</string>
     <string name="save">Сохранить</string>
+    <string name="there_are_no_tracks">В этом плейлисте нет треков</string>
 </resources>
